// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть колонки для BUS 1`] = `
Array [
  "Туристический",
  "11.0 л",
  "395 л.с.",
  "дизель",
  "4x2",
  "синий",
  "механика",
]
`;

exports[`должен вернуть колонки для CARS/NEW 1`] = `
Array [
  "1.6 л",
  "122 л.с.",
  "бензин",
  "робот",
  "внедорожник 5 дв.",
  "передний",
  "Название",
  "42 опции",
]
`;

exports[`должен вернуть колонки для CARS/NEW электрокар 1`] = `
Array [
  "109 л.с.",
  "80 кВт",
  "электро",
  "Заряд на 199 км",
  "хэтчбек 5 дв.",
  "передний",
  "Название",
  "58 опций",
]
`;

exports[`должен вернуть колонки для CARS/NEW электрокар без запаса хода 1`] = `
Array [
  "109 л.с.",
  "80 кВт",
  "электро",
  "автомат",
  "хэтчбек 5 дв.",
  "передний",
  "Название",
  "58 опций",
]
`;

exports[`должен вернуть колонки для CARS/USED 1`] = `
Array [
  "1.6 л",
  "122 л.с.",
  "бензин",
  "робот",
  "внедорожник 5 дв.",
  "передний",
  "белый",
]
`;

exports[`должен вернуть колонки для CARS/USED электрокар 1`] = `
Array [
  "109 л.с.",
  "80 кВт",
  "электро",
  "Заряд на 199 км",
  "хэтчбек 5 дв.",
  "передний",
]
`;

exports[`должен вернуть колонки для CARS/USED электрокар без запаса хода 1`] = `
Array [
  "109 л.с.",
  "80 кВт",
  "электро",
  "автомат",
  "хэтчбек 5 дв.",
  "передний",
]
`;

exports[`должен вернуть колонки для CRANE 1`] = `
Array [
  "г/п 25.0 т",
  "11.2 л",
  "240 л.с.",
  "белый",
]
`;

exports[`должен вернуть колонки для LCV 1`] = `
Array [
  "цельнометаллический фургон",
  "г/п 0.95 т",
  "2.5 л",
  "98 л.с.",
  "бензин",
  "задний",
  "красный",
  "механика",
]
`;

exports[`должен вернуть колонки для MOTORCYCLE 1`] = `
Array [
  "Круизер",
  "1 690 см³",
  "87 л.с.",
  "4 такта",
  "4 цилиндра",
  "v-образное",
  "5 передач",
  "цепь",
  "красный",
]
`;

exports[`должен вернуть колонки для TRAILER 1`] = `
Array [
  "Полуприцеп-цистерна",
  "г/п 24.9 т",
  "оранжевый",
  "Барабанные",
  "3 оси",
]
`;

exports[`должен вернуть колонки для TRUCK 1`] = `
Array [
  "бортовой с кму",
  "г/п 10.0 т",
  "11.7 л",
  "300 л.с.",
  "дизель",
  "2-х местная без спального",
  "6x6",
  "оранжевый",
  "механика",
]
`;
